@@ -3,6 +3,12 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-05-20:
+
+- Fixed an ancient bug that caused a spurious syntax error when using double
+  quotes within a `backtick` command substitution within double quotes.
+  Thanks to atheik for the analysis and the fix.
+
 2022-03-10:
 
 - Fixed another corner case bug in the 'test'/'[' command.
